refac: updated user handler response to use defined structs to help with api documentation
